--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,5 @@
-RewriteEngine on
-RewriteRule ^([^/]+)/? index.php?url=$1 [L,QSA]
+RewriteEngine On
+RewriteBase /rentals
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(.+)$ index.php [QSA,L]
